deploy.yml updated

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,11 @@ jobs:
     runs-on: macOS-latest
     steps:
     - uses: actions/checkout@v1 
+    - name: Configure github access
+      run: |
+        git config --global user.email "azamat.kushmanov@gmail.com"
+        git config --global user.name "Azamat Kushmanov"
+        git config --global url."https://${{ secrets.token }}:@github.com/".insteadOf "https://github.com/"
     - name: Set git tag
       run: |
         git tag `cat version.txt`
