--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,10 +14,12 @@ jobs:
         git config --global user.email "azamat.kushmanov@gmail.com"
         git config --global user.name "Azamat Kushmanov"
         git config --global url."https://${{ secrets.token }}:@github.com/".insteadOf "https://github.com/"
-    - name: Set git tag
-      run: |
-        git tag `cat version.txt`
-        git push --tags
+    # - name: Set git tag
+    #   run: |
+    #     git tag `cat version.txt`
+    #     git push --tags
+    - name: Install podspec-bump
+      run: npm install -g podspec-bump
     # - name: Update cocoapods
     #   run: |
     #     export NEW_VERSION=`echo \`agvtool mvers -terse1\``
