--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,3 +22,4 @@ jobs:
       run: |
         export COCOAPODS_TRUNK_TOKEN=${{secrets.COCOAPODS_TRUNK_TOKEN}}
         pod trunk push AppBoxoSDK.podspec
+        pod repo push https://github.com/Appboxo/ios-sdk-binary AppBoxoSDK.podspec
