deploy.yml update

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,18 +9,17 @@ jobs:
     runs-on: macOS-latest
     steps:
     - uses: actions/checkout@v1 
-    - name: Configure github access
-      run: |
-        git config --global user.email "azamat.kushmanov@gmail.com"
-        git config --global user.name "Azamat Kushmanov"
-        git config --global url."https://${{ secrets.token }}:@github.com/".insteadOf "https://github.com/"
-    - name: Set git tag
-      run: |
-        git tag `cat version.txt`
-        git push --tags
+    # - name: Configure github access
+    #   run: |
+    #     git config --global user.email "azamat.kushmanov@gmail.com"
+    #     git config --global user.name "Azamat Kushmanov"
+    #     git config --global url."https://${{ secrets.token }}:@github.com/".insteadOf "https://github.com/"
+    # - name: Set git tag
+    #   run: |
+    #     git tag `cat version.txt`
+    #     git push --tags
     - name: Update cocoapods
       run: |
-        pod spec lint --allow-warnings
         export COCOAPODS_TRUNK_TOKEN=${{secrets.COCOAPODS_TRUNK_TOKEN}}
         pod trunk push AppBoxoSDK.podspec
         pod repo push https://github.com/Appboxo/ios-sdk-binary AppBoxoSDK.podspec
