deploy.yml changed

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,5 +20,6 @@ jobs:
         git push --tags
     - name: Update cocoapods
       run: |
+        sudo xcode-select -switch /Applications/Xcode_11.4.app
         export COCOAPODS_TRUNK_TOKEN=${{secrets.COCOAPODS_TRUNK_TOKEN}}
-        pod trunk push Ololo.podspec --allow-warnings
+        pod trunk push AppBoxoSDK.podspec --allow-warnings
